site/v1/src/sass/style.scss
// Import a Google Font
// @import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
// $font-body: 'Fira Sans Condensed', sans-serif;
// $font-body: 'K2D', sans-serif;
$font-body: 'B612', sans-serif;
// $font-body: 'Nanum Gothic', sans-serif;

// Set your brand colors
$purple: #8A4D76;
$pink: #FA7C91;
$brown: #757763;
$beige-light: #D0D1CD;
$beige-lighter: #EFF0EB;

$dv-subdued: rgba(69, 73, 85, 1);
$dv-copy: rgba(0,0,0,.7);
$dv-black: rgb(233,233,233);
$dv-selected:yellow;

$grey-dark: $brown;
$grey-light: $beige-light;
$primary: $purple;
$widescreen-enabled: false;
$fullhd-enabled: false;

$control-border-width: 2px;
$input-border-color: transparent;
$input-shadow: none;

$dalyNode:rgba(5,5,5,.9);
$nondalyNode:#bbbfbd;
$dalyLink:#348aa7;
//#09F130;
// #b486ab
// #dbd8ae
// #80a1d4
$nondalyLink:rgba(25,25,25,.8);

$dv-green: $nondalyNode;
$dv-off-green: adjust-color($dv-green,$alpha:-0.2);

$font-title:'B612', sans-serif;
$font-copy:'B612', sans-serif;

$height-header:3vh;
$height-main:100vh;

$A-primary: $dv-green;
$A: $dalyLink;
$AH: adjust-color($A,$alpha:-0.5);
/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ /\ var ++ */

body{width:100%;height:100%;
  // color:$dv-copy;
  font-family: $font-body;
  // background-color:$dv-black;
}

::selection {
  background: $dv-copy; /* WebKit/Blink Browsers */
  color:$dv-black;
}
::-moz-selection {
  background: $dv-copy; /* Gecko Browsers */
  color:$dv-black;
}

#vue-root{
  margin:0;
  max-width:100%;
  width:100%;
  position:relative;
  top:-5px;
  .navbar{
    // background-color:inherit;
  }
}

.card{background-color:adjust-color($dv-black,$alpha:-0.2);}

#console{
  // background-color:transparent;
  font-weight:800;
  font-size:.5em;
  span{
    &.warning{
      color:orange;
    }
    &.error{
      color:red;
    }
  }
}

.tile{
  // background-color:transparent;
  color:inherit;
}

/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ \/ NOUI ++ */
.noUi-pips-horizontal{height:auto;}

.noUi-connect{
  background-color:$dv-green;
}
.noUi-base{
    background-color:white;
  }
  .noUi-tooltip  {color:$dv-copy;}
/* ++++++++++++++++++++++++++++++++++++++++ /\ NOUI ++ */



/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ \/ dv- ++ */

.dv-murder-explain{
  padding:1em 1em;
}

.dv-index-graph-item{
  font-size:.9em;
  padding:0 5em;
  li{list-style: none;padding-left:1em;}
}
.dv-app{
  height:$height-main;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-align: center;
  // background-color:rgba(255,255,255,0);
  // a{font-weight:800;color:$A;}
  a{
    color:$A;
    &:hover{color:lighten($A,52%);}
  }
}

#dv-nav-main{
  // background-color: $dv-black;
  a.navbar-item{
  color:$A-primary;
  font-weight: 900;
    &:hover{color:darken($A-primary,22%);
      // background-color:$dv-black;
    }
  }
}

#dv-graph-wrapper{
  background-color:$dv-black;
  border-top:5px solid $dv-subdued;
  margin-top:16px;
}
#dv-graph-copy-wrapper{
height:90vh;
padding-bottom:8em;
}

#dv-index-graph{
height:($height-main - $height-header);
  width:50%;
  background-color:$dv-black;
  z-index:2;
}
#dv-timeline-graph{
// height:100%;
height:($height-main - $height-header);

  // margin-top:1em;
  // background-color:adjust-color($dv-black,$alpha:-0.4);
  // padding:2em 0 5em 0;
  width:50%;
  background-color:$dv-black;
  z-index:2;
}
#dv-murderers-graph{
// height:100%;
height:($height-main - $height-header);

  // margin-top:1em;
  // background-color:adjust-color($dv-black,$alpha:-0.4);
  // padding:2em 0 5em 0;
  width:50%;
  background-color:$dv-black;
  z-index:2;
}

.dv-vertical-columns{height:$height-main;}

.dv-column-left {
  // padding:0;
  padding:1em 0;
  overflow-y: hidden;
  font-weight:800;
}

.dv-title{
  font-family:$font-title;
  color:$dv-copy;text-weight:900;}


.dv-column-right {
  color: $dv-copy;
  overflow-y: hidden;
  // padding-top:5em;
  // background-color:adjust-color($dv-black,$alpha:-0.1);
  // background-color:adjust-color($body-background-color, $alpha: -0.4);
  // border-left:solid 1px white;
  .dv-graph-copy{
    font-family:$font-copy;
    color:$dv-copy;
    padding:1em 3em;
    overflow-y: hidden;
    li{padding-bottom:1em;}
  }
}

.dv-graph-item{
  padding:1em 3em;
}
.dv-trigger-active{color:$A;cursor:pointer;&:hover{color:$AH;};&:active{color:$dv-copy;}}

/* ++++++++++++++++++++++++++++++++++++++++ /\ dv- ++ */



/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ \/ NETWORK- ++ */
#network{
  // background-color:transparent;
  height:100%;
  width:100%;
  // border:none;
  border-top:5px solid $dv-subdued;
  overflow:hidden;

svg {
position:relative;
border-top:1px solid grey;
// background-color:$dv-black;
height:100%;
width:100%;
  overflow:hidden;
}
}

//graph edges
.link {
  fill: none;
  // stroke: $dalyLink;
  stroke: #E1DBDB;
  // stroke-opacity: .5;
  stroke-width:2px;
  
}

.link > .muted{
stroke-opacity:.2;
  stroke-width:1px;
  stroke-color:#333;
}
.link.muted{
stroke-opacity:.2;
  stroke-width:1px;
  stroke-color:#333;
}

circle{
  r:6;
  fill:$nondalyNode;
  &.invisible{fill:rgba(255,255,255,0);}
  &.daly{
    fill:$dalyNode;r:8;
    &.muted{
fill-opacity:.1;
stroke-opacity:.1;
}
    }//daly
&.selected{
  stroke:$dv-selected;
  stroke-width:3;
  r:10;
}
&.muted{
fill-opacity:.1;
stroke-opacity:.1;
}
}
/* ++++++++++++++++++++++++++++++++++++++++ /\ NETWORK- ++ */


/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ \/ FONTS ++ */

// @font-face {
//   font-family: 'OpenSans-ExtraBold';
//   font-style: normal;
//   font-weight: 400;
//   src: local('OpenSans-ExtraBold'), local('OpenSans-ExtraBold'), url('assets/fonts/OpenSans-ExtraBold.ttf') format('truetype');
// }

@font-face {
  font-family: 'B612';
  font-style: normal;
  font-weight: 400;
  src: local('B612'), local('B612'), url('assets/fonts/B612/B612-Bold.ttf'), format('truetype');
}

@font-face {
  font-family: 'Miriam Libre';
  font-style: normal;
  font-weight: 400;
  src: local('Miriam_Libre'), local('Miriam_Libre'), url('assets/fonts/Miriam_Libre/MiriamLibre-Bold.ttf'), format('truetype');
}

@font-face{
  font-family:'Doppio_One';
font-style:normal;
font-weight:400;
src:local('Doppio_One'),local('Doppio_One'),url('./assets/fonts/Doppio_One/DoppioOne-Regular.ttf'), format('truetype');
}

@font-face{
  font-family:'Fira_Code';
font-style:normal;
font-weight:400;
src:local('Fira_Code'),local('Fira_Code'),url('assets/fonts/Fira_Code/FiraCode-Regular.ttf'), format('truetype');
}

@font-face{
  font-family:'IBM_Plex_Mono';
font-style:normal;
font-weight:400;
src:local('IBM_Plex_Mono'),local('IBM_Plex_Mono'),url('assets/fonts/IBM_Plex_Mono/IBMPlexMono-SemiBold.ttf'), format('truetype');
}

@font-face{
  font-family:'K2D';
font-style:normal;
font-weight:400;
src:local('K2D'),local('K2D'),url('assets/fonts/K2D/K2D-SemiBold.ttf'), format('truetype');
}

@font-face{
  font-family:'Nanum_Gothic';
font-style:normal;
font-weight:400;
src:local('Nanum_Gothic'),local('Nanum_Gothic'),url('assets/fonts/Nanum_Gothic/NanumGothic-Bold.ttf'), format('truetype');
}
/* ++++++++++++++++++++++++++++++++++++++++ /\ FONTS- ++ */


/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ \/ INDEX ++ */
.dv-index-entities{font-size:.7em;}
// .dv-index-table{overflow-x: scroll;}
/* ++++++++++++++++++++++++++++++++++++++++ /\ INDEX- ++ */

/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ ⬇ V-TOOLTIP  ++ */

.tooltip {
  display: block !important;
  z-index: 10000;
  font-size: .7em;

  .tooltip-inner {
    background: adjust-color($dalyLink,$alpha:-0.2);
    color: white;
    border-radius: 6px;
    padding: 5px 10px 4px;
  }

  .tooltip-arrow {
    width: 0;
    height: 0;
    border-style: solid;
    position: absolute;
    margin: 5px;
    border-color: adjust-color($dalyLink,$alpha:-0.2);
  }

  &[x-placement^="top"] {
    margin-bottom: 5px;

    .tooltip-arrow {
      border-width: 5px 5px 0 5px;
      border-left-color: transparent !important;
      border-right-color: transparent !important;
      border-bottom-color: transparent !important;
      bottom: -5px;
      left: calc(50% - 5px);
      margin-top: 0;
      margin-bottom: 0;
    }
  }

  &[x-placement^="bottom"] {
    margin-top: 5px;

    .tooltip-arrow {
      border-width: 0 5px 5px 5px;
      border-left-color: transparent !important;
      border-right-color: transparent !important;
      border-top-color: transparent !important;
      top: -5px;
      left: calc(50% - 5px);
      margin-top: 0;
      margin-bottom: 0;
    }
  }

  &[x-placement^="right"] {
    margin-left: 5px;

    .tooltip-arrow {
      border-width: 5px 5px 5px 0;
      border-left-color: transparent !important;
      border-top-color: transparent !important;
      border-bottom-color: transparent !important;
      left: -5px;
      top: calc(50% - 5px);
      margin-left: 0;
      margin-right: 0;
    }
  }

  &[x-placement^="left"] {
    margin-right: 5px;

    .tooltip-arrow {
      border-width: 5px 0 5px 5px;
      border-top-color: transparent !important;
      border-right-color: transparent !important;
      border-bottom-color: transparent !important;
      right: -5px;
      top: calc(50% - 5px);
      margin-left: 0;
      margin-right: 0;
    }
  }

  &[aria-hidden='true'] {
    visibility: hidden;
    opacity: 0;
    transition: opacity .15s, visibility .15s;
  }

  &[aria-hidden='false'] {
    visibility: visible;
    opacity: 1;
    transition: opacity .15s;
  }
}

/* ++++++++++++++++++++++++++++++++++++++++ /\ V-TOOLTIP - ++ */


/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ \/ TIMELINE ++ */
#timeline{
  padding-top:0;
}
.vis-panel{
  font-weight:800;font-size:.8em;
}
.vis-even{
  // background-color:rgba(0,0,0,.01)
  background-color:adjust-color($dv-black,$alpha:-0.2)
}
.vis-odd{
  // background-color:rgba(0,0,0,.05)
  background-color:adjust-color($dv-black,$alpha:-0.4)
}
.vis-item {
  background-color:$dv-black;
  color:$dv-copy;
  border-color:white;
  &:hover{
    background-color:$dv-green;
  }
}
.vis-item.vis-box{
  border-radius:3px;
}
.vis-item-content{
  font-weight:800;
  font-size:.8em;
}

.vis-dot.vis-selected{

}
.vis-item.vis-point.vis-selected, .vis-item.vis-selected{
  background-color:$dv-green;
  color:black;
  border-color:$dv-green;
  .dv-time-item-w-geo{color:$dv-copy;}
}
.vis-text.vis-major{
  font-weight:800;
  font-size:1.7em;
  // color:rgba(255,255,255,.6);
  color:$dv-copy;
}
.vis-text.vis-minor{
  font-size:.9em;
  // color:rgba(255,255,255,.6);
  color:$dv-copy;
}
.dv-time-item{
.dv-time-item-w-geo{
  // font-size:1em;
  color: $dv-copy;
  font-weight:800;
}
}

.vis-time-axis .vis-grid.vis-minor{
  border-color:rgba(255,255,255,.2);
}

.vis-panel.vis-bottom{

  border-color:rgba(255,255,255,.2);
}

.vis-timeline{
  
  border:none;
  // rgba(255,255,255,.2);
}
/* ++++++++++++++++++++++++++++++++++++++++ /\ TIMELINE- ++ */

.dv-dl {
  // width: 40%;

  dt {
    float: left;
    margin-right: 10%;
    max-width: 40%;
    font-weight: bold;
  }
  
  dd {
    color: $dv-copy;
    // margin-left: 50%;
    margin-bottom: .5em;
  }
  
  dd::after {
    content: " ";
    display: block;
    clear: left;
  }  
}

